First commit: Add ROS noetic template for normal node

--- a/ros_pkg_template_cpp/package.xml
+++ b/ros_pkg_template_cpp/package.xml
@@ -3,30 +3,21 @@
 <package format="2">
   <name>ros_pkg_template_cpp</name>
   <version>0.0.1</version>
-  <description>Ros lifecycle component template</description>
+  <description>Ros node template</description>
   <maintainer email="jcarlos3094@gmail.com">Jose Carlos Garcia Moreno</maintainer>
   <license>Apache License 2.0</license>
   <author>Jose Carlos Garcia Moreno</author>
   <author email="jcarlos3094@gmail.com">Jose Carlos Garcia Moreno</author>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>rclcpp</build_depend>
-  <build_depend>rclcpp_components</build_depend>
-  <build_depend>rclcpp_lifecycle</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>std_srvs</build_depend>
+  <build_depend>boost</build_depend>
 
-  <exec_depend>rclcpp</exec_depend>
-  <exec_depend>rclcpp_components</exec_depend>
-  <exec_depend>rclcpp_lifecycle</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>std_srvs</exec_depend>
+  <depend>eigen</depend>
+  <depend>roscpp</depend>
+  <depend>std_msgs</depend>
+  <depend>std_srvs</depend>
+  <depend>dynamic_reconfigure</depend>
 
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
-
-  <export>
-    <build_type>ament_cmake</build_type>
-  </export>
+  <build_depend>roslint</build_depend>
 </package>
